<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.exercises.sart1991.evaluacionfinal7.ui.activity.login.LoginActivity"
    tools:showIn="@layout/activity_login">
    
    <TextView
        android:id="@+id/textView_login_contentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_contentTitle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/accent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />
    
    <TextView
        android:id="@+id/textView_login_contentSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_contentSubtitle"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondary_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_login_contentTitle" />
    
    <ImageView
        android:id="@+id/imageView_login_welcomeImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/login_drop_24dp"
        android:tint="@color/primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_login_contentSubtitle"
        android:contentDescription="@string/login_imageViewDescription" />
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/til_login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_login_welcomeImage"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed">
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_editHintUserName" />
    
    </android.support.design.widget.TextInputLayout>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/til_login_userName"
        app:layout_constraintRight_toRightOf="@id/til_login_userName"
        app:layout_constraintTop_toBottomOf="@id/til_login_userName">
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_editHintPassword"
            android:inputType="textPassword" />
    
    </android.support.design.widget.TextInputLayout>
    
    <Button
        android:id="@+id/button_login_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_buttonLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_login_newUser"
        app:layout_constraintTop_toBottomOf="@id/til_login_password"
        app:layout_constraintVertical_bias="0.1"
        android:backgroundTint="@color/accent"
        android:textColor="@color/icons"
        android:layout_marginStart="32dp"/>
    
    <Button
        android:id="@+id/button_login_newUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_buttonNewUsername"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/button_login_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_login_password"
        app:layout_constraintVertical_bias="0.1"
        android:backgroundTint="@color/primary_light"
        android:layout_marginEnd="32dp"/>

</android.support.constraint.ConstraintLayout>