<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_dialogNewPassword_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/editText_dialogNewPassword_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialogNewPassword_current"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/editText_dialogNewPassword_new"/>
    
    </android.support.design.widget.TextInputLayout>
    
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_dialogNewPassword_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/editText_dialogNewPassword_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialogNewPassword_newPassword"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/ediText_dialogNewPassword_conf"/>
    
    </android.support.design.widget.TextInputLayout>
    
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_dialogNewPassword_conf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/ediText_dialogNewPassword_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialogNewPassword_confNewPassword"
            android:inputType="textPassword" />
        
    </android.support.design.widget.TextInputLayout>
    
</LinearLayout>