<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="16dp">
        
        <ImageButton
            android:id="@+id/imageButton_cardViewDonor_dotsMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:contentDescription="@string/cardView_imageButton_dotsDescription"
            android:src="@drawable/cardview_donor_dots_24dp"
            app:layout_constraintBottom_toBottomOf="@id/textView_cardViewDonor_id"
            app:layout_constraintLeft_toRightOf="@id/textView_cardViewDonor_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView_cardViewDonor_name" />
        
        <TextView
            android:id="@+id/textView_cardViewDonor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toTopOf="@+id/textView_cardViewDonor_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageButton_cardViewDonor_dotsMenu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />
        
        <TextView
            android:id="@+id/textView_cardViewDonor_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_id_"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/textView_cardViewDonor_age"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_cardViewDonor_name" />
        
        <TextView
            android:id="@+id/textView_cardViewDonor_idContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_test"
            app:layout_constraintLeft_toRightOf="@id/textView_cardViewDonor_id"
            app:layout_constraintTop_toBottomOf="@id/textView_cardViewDonor_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintRight_toLeftOf="@id/imageButton_cardViewDonor_dotsMenu"/>
        
        <TextView
            android:id="@+id/textView_cardViewDonor_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_age_"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@id/textView_carViewDonor_bloodType"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_cardViewDonor_id" />
        
        <TextView
            android:id="@+id/textView_cardViewDonor_ageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintLeft_toRightOf="@id/textView_cardViewDonor_age"
            app:layout_constraintTop_toBottomOf="@id/textView_cardViewDonor_id" />
        
        <TextView
            android:id="@+id/textView_carViewDonor_bloodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_blood_type_"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@id/textView_cardViewDonor_weight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_cardViewDonor_age" />
        
        <TextView
            android:id="@+id/textView_cardViewDonor_bloodTypeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/textView_carViewDonor_bloodType"
            android:text="@string/_test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/textView_cardViewDonor_age"
            android:layout_marginStart="4dp"/>
        
        <TextView
            android:id="@+id/textView_cardViewDonor_rh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/textView_cardViewDonor_bloodTypeContainer"
            android:text="@string/_rh_"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            app:layout_constraintTop_toTopOf="@id/textView_carViewDonor_bloodType"
            android:layout_marginStart="16dp"/>
        
        <TextView
            android:id="@+id/textView_cardViewDonor_rhContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/textView_cardViewDonor_rh"
            android:text="@string/_test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@id/textView_cardViewDonor_rh"
            android:layout_marginLeft="4dp"/>
        
        <TextView
            android:id="@+id/textView_cardViewDonor_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_weight_"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_carViewDonor_bloodType" />
        
        <TextView
            android:id="@+id/textView_cardViewDonor_weightContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/textView_cardViewDonor_weight"
            android:text="@string/_test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/textView_carViewDonor_bloodType"/>
        
        <TextView
            android:id="@+id/textView_cardViewDonor_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_height_"
            android:textColor="@color/primary_text"
            app:layout_constraintLeft_toLeftOf="@id/textView_cardViewDonor_rh"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@id/textView_cardViewDonor_weight"/>
        
        <TextView
            android:id="@+id/textView_cardViewDonor_heightContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/textView_cardViewDonor_height"
            android:text="@string/_test"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@id/textView_cardViewDonor_height"/>
    
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
